tests/errors/04_duplicate_declaration.f
      PROGRAM DUP_DECL
      INTEGER A
      REAL A
      END
